--- a/views/books-admin.ejs
+++ b/views/books-admin.ejs
@@ -89,7 +89,9 @@
     <!-- Edit Book FormEnd of Edit Book Form -->
     <!-- End of Modals -->
     <header class="main-header" id="home">
+      <div class="logo"><img src="../public/images/dummy-logo.jpg" alt=""></div>
       <nav class="header-container clearfix">
+        <div class="site-name">AstroBooks</div>
         <ul class="main-nav">
           <li><a class="link1" href="/">Home</a></li>
           <li><a class="link2" href="/admin/logout">Logout</a></li>
