--- a/views/books.ejs
+++ b/views/books.ejs
@@ -18,13 +18,15 @@
 <body>
 
   <header class="main-header" id="home">
-    <nav class="header-container clearfix">
-      <ul class="main-nav">
-        <!-- <li><a class="link1" href="#home">Home</a></li> -->
-        <li><a class="link2" href="/">Home</a></li>
-      </ul>
-    </nav>
-  </header>
+      <div class="logo"><img src="../public/images/dummy-logo.jpg" alt=""></div>
+      <nav class="header-container clearfix">
+        <div class="site-name">AstroBooks</div>
+        <ul class="main-nav">
+          <li><a class="link1" href="/">Home</a></li>
+          <li><a class="link2" href="/admin/logout">Logout</a></li>
+        </ul>
+      </nav>
+    </header>
   <div class="main" id="portfolio">
     <section class="books-grid main">
       <div class="books">
