--- a/views/books.ejs
+++ b/views/books.ejs
@@ -21,9 +21,8 @@
       <div class="logo"><img src="../public/images/dummy-logo.jpg" alt=""></div>
       <nav class="header-container clearfix">
         <div class="site-name">AstroBooks</div>
-        <ul class="main-nav">
+        <ul class="main-nav" style="padding-right: 9%;">
           <li><a class="link1" href="/">Home</a></li>
-          <li><a class="link2" href="/admin/logout">Logout</a></li>
         </ul>
       </nav>
     </header>
