--- a/views/books.ejs
+++ b/views/books.ejs
@@ -21,9 +21,9 @@
       <div class="logo"><img src="../public/images/dummy-logo.jpg" alt=""></div>
       <nav class="header-container clearfix">
         <div class="site-name">AstroBooks</div>
-        <ul class="main-nav" style="padding-right: 9%;">
+        <!-- <ul class="main-nav" style="padding-right: 9%;">
           <li><a class="link1" href="/">Home</a></li>
-        </ul>
+        </ul> -->
       </nav>
     </header>
   <div class="main" id="portfolio">
@@ -38,6 +38,9 @@
             </div>
             <div class="book-name">
               <h4 class="b-name"><%= book.name %></h4>
+            </div>
+            <div class="book-name">
+              <h4 class="b-name"><%= book.author %></h4>
             </div>
             <div class="buttons">
               <div class="view-btn button">
