--- a/public/css/books.css
+++ b/public/css/books.css
@@ -11,8 +11,8 @@ a:link {
 }
 .button-style {
   color: white;
-  font-size: 1.3rem;
-  font-weight: 600;
+  font-size: 1.2rem;
+  /* font-weight: 600; */
 }
 
 .books {
@@ -66,7 +66,7 @@ a:link {
   transform: translateY(0px);
   transition: ease 0.5s;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.068);
-  background-color: aliceblue;
+  background-color: white;
   padding-top: 1rem;
 }
 
@@ -106,7 +106,18 @@ a:link {
   font-size: 30px;
   overflow: hidden;
   float: left;
-  letter-spacing: 0.4rem;
+  letter-spacing: 0.09rem;
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+.aut-name {
+  font-family: var(--global-font);
+  padding: 10px;
+  font-size: 30px;
+  overflow: hidden;
+  float: left;
+  letter-spacing: 0.09rem;
   font-weight: bold;
   font-size: 2.5rem;
 }
@@ -133,17 +144,19 @@ p {
 
 .button {
   overflow: hidden;
-  background: blueviolet;
-  padding: 10px 20px;
+    background: blueviolet;
+    padding: 10px 20px;
+    border-radius: 8px;
 }
 
 .add-book {
   text-decoration: none;
-  color: black;
+  color: white;
   cursor: pointer;
   padding: 10px 20px;
-  background-color: whitesmoke;
+  background-color: #655ff3;
   border: 0;
+  border-radius: 8px;
   font-size: 1.3rem;
 }
 .edit-book {
@@ -156,7 +169,7 @@ p {
 }
 
 .add-book:hover {
-  color: orange;
+  color: #b7fbf1;
 }
 
 @media screen and (max-width: 768px) {
@@ -201,13 +214,20 @@ p {
 @media screen and (max-width: 520px) {
   .book-img {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
   .book {
-    height: 48vh;
+    height: auto;
+  }
+
+  .button-style {
+    /* color: white; */
+    font-size: 1rem;
+    /* font-weight: 600; */
   }
   .buttons {
-    margin-top: 9%;
+
+    margin-top: 5%;
     padding-top: 0;
     justify-content: space-around;
     margin-right: 0;
