--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,25 @@
+@font-face{
+	font-family: 'Oswald';
+	src: url(../font/oswald.ttf);
+}
+
+@font-face{
+	font-family: 'CenturyGothic';
+	src: url(../font/CenturyGothic.ttf);
+}
+
 * {
   box-sizing: border-box;
   overflow-x: hidden;
 }
 
+
+
 body {
   margin: 0 auto;
   font-family: "Fjalla One", sans-serif;
   outline: none !important;
-  /* background-color: #070707; */
+  background-color: aliceblue;
 }
 input {
   outline: none !important;
@@ -30,6 +42,14 @@ h4,
   font-family: "Roboto", sans-serif;
   font-weight: bold;
 }
+.book-im
+{
+  position: fixed;
+    top: 32%;
+    z-index: -5;
+    opacity: 80%;
+    left: 22%;
+}
 .main-nav li {
   display: inline;
   list-style-type: none;
@@ -45,7 +65,22 @@ h4,
   overflow: hidden;
 }
 .b-name {
-  margin: 0;
+  font-size: 0.7em;
+    margin: 0;
+    letter-spacing: 0.02em;
+    font-family: Oswald , sans-serif;
+    color: #23283a;
+    text-align: left;
+}
+
+.a-name {
+  font-size: 0.4em;
+    margin: 0;
+    letter-spacing: 0.03em;
+    font-family:  sans-serif;
+    color: #23283a;
+    font-weight: normal;
+    text-align: left;
 }
 .main-nav a {
   color: #87f5fb;
@@ -169,7 +204,7 @@ h2 {
   padding-top: 1%;
   float: left;
   font-size: 256%;
-  letter-spacing: 0.7rem;
+  letter-spacing: 0.07em;
 }
 
 .logo {
@@ -182,6 +217,7 @@ h2 {
 
 /* Media Query for Tablet */
 @media screen and (min-width: 768px) {
+
   .main-nav li {
     display: inline;
     padding-left: 30px;
@@ -365,10 +401,11 @@ h2 {
   width: auto;
   margin-left: 7%;
   margin-right: auto;
-  padding-top: 1%%;
+  padding-top: 1%;
   float: left;
   font-size: 256%;
-  letter-spacing: 0.7rem;
+  letter-spacing: 0.07em;
+  font-family: CenturyGothic , sans-serif;
 }
 }
 
@@ -382,6 +419,24 @@ h2 {
 
 @media screen and (max-width:768px)
 {
+  .book-im{
+    position: fixed;
+    top: 38%;
+    z-index: -5;
+    opacity: 80%;
+    left: -153%;
+  }
+  
+
+  .b-name {
+    font-size: 0.5em;
+    text-align: center;
+  }
+  
+  .a-name {
+    font-size: 0.3em;
+    text-align: center;
+  }
   .site-name{
     width: 100%;
     margin-left: 2%;
