--- a/views/books.ejs
+++ b/views/books.ejs
@@ -17,9 +17,14 @@
 </head>
 <body>
   <header class="main-header" id="home">
-    <div class="logo"><img src="../public/images/dummy-logo.jpg" alt="" /></div>
+    
     <nav class="header-container clearfix">
-      <div class="site-name">AstroBooks</div>
+      <div class="logo">
+      </div>
+
+     
+      <span class="site-name">AstroLibrary</span>
+      <!-- <br> -->
       <!-- <ul class="main-nav" style="padding-right: 9%;">
           <li><a class="link1" href="/">Home</a></li>
         </ul> -->
